# Tense

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  USAGE.md
cmake/: TenseConfig.cmake
example/: least_squares.cpp  neural_network.cpp
src/tense/: common.h  config.h.in  functional.h  struct.h  tense.h  util.h
src/tense/matrix/: base.h  expr.h  extr.h  impl.h  struct.h
src/tense/tensor/: base.h  expr.h  impl.h  struct.h
src/tense/vector/: base.h  expr.h  extr.h  impl.h  struct.h
test/: matrix.cpp  tensor.cpp  tests.cpp  vector.cpp
